# speech-android

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_de.md  README_es.md  README_fr.md  README_hi.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_zh.md  build.gradle.kts  settings.gradle.kts  setup.sh
.claude/skills/: test.md
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/soniqo/speech/demo/: DictationActivity.kt  LauncherActivity.kt  MainActivity.kt
app/src/main/res/values/: themes.xml
linux/: CMakeLists.txt  README.md  setup_linux.sh
linux/src/: speech.cpp
linux/tests/: download_models.sh  test_pipeline.cpp
scripts/: README.md  convert_models.bat  convert_parakeet_onnx.py  convert_single.py  setup_convert_env.bat
sdk/: build.gradle.kts  consumer-rules.pro
sdk/src/androidTest/kotlin/com/soniqo/speech/: BargeInTest.kt  DeepFilterTest.kt  KokoroMultilingualTest.kt  KokoroTtsTest.kt  ParakeetSttTest.kt  PipelineE2ETest.kt  SileroVadTest.kt
sdk/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
sdk/src/main/cpp/audio/: fft.cpp  fft.h  mel.cpp  mel.h  stft.cpp  stft.h
sdk/src/main/cpp/models/: deepfilter.cpp  deepfilter.h  inference_engine.h  kokoro_multilingual.cpp  kokoro_multilingual.h  kokoro_phonemizer.cpp  kokoro_phonemizer.h  kokoro_tts.cpp  kokoro_tts.h  onnx_backend.h  onnx_engine.h  parakeet_stt.cpp  parakeet_stt.h  silero_vad.cpp  silero_vad.h  soc_detect.cpp
sdk/src/main/kotlin/com/soniqo/speech/: LlmBridge.kt  ModelManager.kt  NativeBridge.kt  SpeechConfig.kt  SpeechEvent.kt  SpeechPipeline.kt
sdk/src/main/kotlin/com/soniqo/speech/service/: SpeechRecognitionService.kt
sdk/src/test/kotlin/audio/soniqo/speech/: ModelManagerDownloadTest.kt
